# SongBook

./: pyproject.toml
songbook/: __main__.py  songbook.py
